--- a/css/gamebox.css
+++ b/css/gamebox.css
@@ -6,8 +6,8 @@ html, body{width: 100%; height: 100%;}
 html, body, #gameboxContainer, #gamebox {position: relative; z-index: -1;}
 .tile, .character, .object {position: absolute;}
 .tile { z-index: -1;}
-/*.character img {min-width: 70%; min-height: 70%; max-width: 100%; max-height: 100%;}*/
-.characterImg {
+.character img {min-width: 60%; min-height: 70%; max-width: 100%; max-height: 100%;}
+.characterImg{
 			max-width: 30px;
 			max-height: 40px;
 		}
