--- a/css/gamebox.css
+++ b/css/gamebox.css
@@ -1,4 +1,5 @@
 * {margin: 0; padding: 0;}
+
 html, body{width: 100%; height: 100%;}
 .row {width:100%;}
 
@@ -22,13 +23,19 @@ html, body, #gameboxContainer, #gamebox {position: relative; z-index: -1;}
 	/*overflow-x: scroll; */
 	/*overflow-y: scroll;*/
 	z-index: -2;
+	overflow: hidden;
 }
 
 #gamebox {
-	border: 1px solid blue;
+	/*border: 1px solid blue;*/
 	overflow-x: scroll; 
 	overflow-y: scroll;
-	height: 70%;
+	width:100%;
+	height:100%;
+	padding-right: 17px;  
+	padding-bottom: 17px;
+    box-sizing: content-box; 
+	/*overflow: hidden;*/
 }
 
 .btn-heal, .btn-heal:hover, .btn-heal:active, .btn-heal:focus {
@@ -37,5 +44,4 @@ html, body, #gameboxContainer, #gamebox {position: relative; z-index: -1;}
 }
 .btn-heal:focus {border: 1px solid #ff78e2;}
 .btn-heal:hover {background: #ff78e2;}
-
 
